# blog-post-draft-reviewer

./: CLAUDE.md  GEMINI.md  README.md  checklist.md  client.py  display.py  main.py  prompts.py  pyproject.toml  reviewer.py  rubric.py  schema.py
providers/: __init__.py  anthropic_provider.py  base.py  deepseek_provider.py  gemini_provider.py  groq_provider.py  ollama_provider.py
tests/: test_prompts.py  test_providers.py  test_reviewer.py  test_rubric.py  test_schema.py
tests/fixtures/: sample-draft.md
